--- a/app/formulaire.html
+++ b/app/formulaire.html
@@ -4,11 +4,10 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>TD5</title>
+    <title>DockerProject</title>
 </head>
 
 <body>
-
     <form method="post" action="verif_formulaire.php">
         <div class="form">
             <div class="title">Projet Docker</div>
@@ -32,7 +31,8 @@
                 <div class="cut cut-short"></div>
                 <label for="mdp" class="placeholder">Mot de Passe</label>
             </div>
-            <button type="text" class="submit">submit</button>
+            <button type="text" class="submit">Envoyer</button>
+            <button type="text" class="submit">Affichage des utilisateurs</button>
         </div>
 
     </form>
